package review_oo.abstraction;

public interface FormaGeometrica {
    double calcularArea();
    double calcularPerimetro();
}
